--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,4 @@ deployment:
   prod:
     branch: master
     commands:
-      - aws s3 sync jekyll/_site/docs s3://first-half-goals.s3-website-eu-west-1.amazonaws.com/ --delete
+      - aws s3 sync build/ s3://first-half-goals --delete
