--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv-expand": "4.2.0",
     "eslint": "4.19.1",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-import": "2.12.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.9.1",
     "extract-text-webpack-plugin": "3.0.2",
