--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,9 @@ jobs:
       # run tests!
       - run: yarn test
   deploy:
+    docker:
+      - image: circleci/node:8.9.4
+    working_directory: ~/repo
     steps:
       - run:
           name: Install awscli
