--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run: yarn test
   deploy:
     docker:
-      - image: circleci/node:8.9.4
+      - image: circleci/python:2.7
     working_directory: ~/repo
     steps:
       - run:
