--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,17 +28,29 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       # run tests!
       - run: yarn test
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - dist
+            - package.json
   deploy:
     docker:
       - image: circleci/python:2.7
     working_directory: ~/repo
     steps:
+      - attach_workspace:
+          at: ~/repo
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run:
           name: Install awscli
           command: sudo pip install awscli
       - run:
           name: Deploy to S3
-          command: aws s3 sync ~/repo/ s3://first-half-goals --delete
+          command: aws s3 sync dist/ s3://first-half-goals --delete
 workflows:
   version: 2
   build-deploy:
