--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,17 @@ jobs:
       # - image: circleci/mongo:3.4.4
     working_directory: ~/repo
     steps:
-      - checkout
-      # Download and cache dependencies
-      - save_cache:
+      - restore_cache:
           keys:
           - v1-source-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-source-
+      - checkout
+      # Download and cache dependencies
+      - save_cache:
+          key: v1-source-{{ checksum "package.json" }}
+          paths:
+            - "~/repo"
       - run: yarn install
       - save_cache:
           paths:
