--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: "Tests"
+          name: "Test"
           command: yarn test
   build:
     <<: *defaults
@@ -62,14 +62,10 @@ jobs:
     steps:
       - restore_cache:
           keys:
-          - v1-source-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-source-
+          - source-{{ .Branch }}-{{ .Revision }}
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+          - dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Install awscli
           command: sudo pip install awscli
