--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run:
           name: "Test"
           command: yarn test
-  build:
+build:
     <<: *defaults
     steps:
       - restore_cache:
@@ -53,19 +53,30 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
-          name: "Build Application"
+          name: "Build app"
           command: yarn build
+      - persist_to_workspace:
+          root: ~/repo
+          paths:
+            - dist
+            - package.json
   deploy:
     docker:
       - image: circleci/python:2.7
     working_directory: ~/repo
     steps:
+      - attach_workspace:
+          at: ~/repo
       - restore_cache:
           keys:
-          - source-{{ .Branch }}-{{ .Revision }}
+          - v1-source-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-source-
       - restore_cache:
           keys:
-          - dependency-cache-{{ checksum "package.json" }}
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run:
           name: Install awscli
           command: sudo pip install awscli
