--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,10 @@ jobs:
       - run:
           name: "Build app"
           command: yarn build
+      -save-cache:
+          key: build-cache-{{ checksum "package.json" }}
+          paths:
+            - build
   deploy:
     docker:
       - image: circleci/python:2.7
@@ -66,12 +70,15 @@ jobs:
       - restore_cache:
           keys:
           - dependency-cache-{{ checksum "package.json" }}
+      - restore_cache:
+          keys:
+          - build-cache-{{ checksum "package.json" }}
       - run:
           name: Install awscli
           command: sudo pip install awscli
       - run:
           name: Deploy to S3
-          command: aws s3 sync ~repo/ s3://first-half-goals --delete
+          command: aws s3 sync . s3://first-half-goals --delete
 workflows:
   version: 2
   build-deploy:
