--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.4.2",
     "babel-loader": "7.1.5",
     "babel-preset-react-app": "^3.1.1",
@@ -16,6 +17,8 @@
     "dotenv-expand": "4.2.0",
     "eslint": "4.19.1",
     "eslint-loader": "1.9.0",
+    "eslint-plugin-flow-header": "^0.2.0",
+    "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
@@ -34,7 +37,14 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-saga": "^0.16.2",
+    "redux-thunk": "^2.3.0",
     "style-loader": "0.19.0",
     "styled-components": "^3.3.3",
     "sw-precache-webpack-plugin": "0.11.5",
