--- a/.flowconfig
+++ b/.flowconfig
@@ -10,5 +10,6 @@
     module.name_mapper='@components' -> '<PROJECT_ROOT>/src/components'
     module.name_mapper='@pages' -> '<PROJECT_ROOT>/src/pages'
     module.name_mapper='@config' -> '<PROJECT_ROOT>/src/config'
+    module.name_mapper='@redux' -> '<PROJECT_ROOT>/src/redux'
 
 [strict]
