--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint": "4.19.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flow-header": "^0.2.0",
@@ -41,9 +43,12 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
+    "react-test-renderer": "^16.6.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
+    "redux-mock-store": "^1.5.3",
     "redux-saga": "^0.16.2",
+    "redux-saga-tester": "^1.0.381",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.19.0",
     "styled-components": "^3.3.3",
