--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "4.19.1",
-    "eslint-loader": "1.9.0",
+    "eslint-loader": "^2.2.1",
     "eslint-plugin-flow-header": "^0.2.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
+    "file-loader": "^4.2.0",
     "flow-typed": "^2.4.0",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "jest": "23.6.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -37,7 +38,7 @@
     "promise": "8.0.2",
     "raf": "3.4.1",
     "react": "^16.7.0",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^9.0.3",
     "react-dom": "^16.7.0",
     "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
@@ -53,10 +54,12 @@
     "style-loader": "0.19.0",
     "styled-components": "^3.4.10",
     "sw-precache-webpack-plugin": "0.11.5",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
+    "ts-loader": "^6.0.4",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2",
+    "webpack-manifest-plugin": "^2.0.4",
     "whatwg-fetch": "2.0.4"
   },
   "scripts": {
@@ -71,7 +74,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
     "eslint-config-airbnb": "^17.0.0",
-    "flow-bin": "^0.75.0"
+    "flow-bin": "^0.75.0",
+    "fork-ts-checker-notifier-webpack-plugin": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
