--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel-loader": "7.1.5",
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -22,8 +22,8 @@
     "eslint-plugin-flow-header": "^0.2.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "^4.2.0",
     "flow-typed": "^2.4.0",
@@ -33,9 +33,9 @@
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "promise": "8.0.2",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "promise": "^8.0.3",
     "raf": "3.4.1",
     "react": "^16.7.0",
     "react-dev-utils": "^9.0.3",
@@ -58,7 +58,7 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "2.9.4",
+    "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.0.4",
     "whatwg-fetch": "2.0.4"
   },
