--- a/package.json
+++ b/package.json
@@ -3,63 +3,63 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "autoprefixer": "7.1.6",
+    "autoprefixer": "9.6.1",
     "babel-core": "6.26.3",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.0.2",
     "babel-jest": "23.6.0",
     "babel-loader": "7.1.5",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-preset-react-app": "3.1.1",
     "babel-runtime": "6.26.0",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "4.19.1",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chalk": "2.4.2",
+    "css-loader": "3.2.0",
+    "dotenv": "8.1.0",
+    "dotenv-expand": "5.1.0",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "eslint": "6.2.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-flow-header": "^0.2.0",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-flow-header": "0.2.0",
+    "eslint-plugin-flowtype": "4.2.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "^4.2.0",
-    "flow-typed": "^2.4.0",
+    "file-loader": "4.2.0",
+    "flow-typed": "2.6.1",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.8",
+    "html-webpack-plugin": "4.0.0-beta.8",
     "jest": "23.6.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "moment": "^2.24.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "moment": "2.24.0",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
-    "promise": "^8.0.3",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "promise": "8.0.3",
     "raf": "3.4.1",
-    "react": "^16.7.0",
-    "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.7.0",
-    "react-redux": "^5.1.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-table": "^6.8.6",
-    "react-test-renderer": "^16.7.0",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.7",
-    "redux-mock-store": "^1.5.3",
-    "redux-saga": "^0.16.2",
-    "redux-saga-tester": "^1.0.381",
-    "redux-thunk": "^2.3.0",
-    "style-loader": "0.19.0",
-    "styled-components": "^3.4.10",
+    "react": "16.9.0",
+    "react-dev-utils": "9.0.3",
+    "react-dom": "16.9.0",
+    "react-redux": "5.1.0",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "react-table": "6.10.0",
+    "react-test-renderer": "16.9.0",
+    "redux": "4.0.4",
+    "redux-devtools-extension": "2.13.8",
+    "redux-mock-store": "1.5.3",
+    "redux-saga": "0.16.2",
+    "redux-saga-tester": "1.0.526",
+    "redux-thunk": "2.3.0",
+    "style-loader": "1.0.0",
+    "styled-components": "3.4.10",
     "sw-precache-webpack-plugin": "0.11.5",
-    "ts-loader": "^6.0.4",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-manifest-plugin": "^2.0.4",
+    "ts-loader": "6.0.4",
+    "url-loader": "2.1.0",
+    "webpack": "4.39.2",
+    "webpack-cli": "3.3.7",
+    "webpack-dev-server": "3.8.0",
+    "webpack-manifest-plugin": "2.0.4",
     "whatwg-fetch": "2.0.4"
   },
   "scripts": {
@@ -71,12 +71,12 @@
     "deploy": "node scripts/build.js && aws s3 sync build/ s3://first-half-goals --delete"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-flow": "^6.23.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "flow-bin": "^0.75.0",
-    "fork-ts-checker-notifier-webpack-plugin": "^1.0.2",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "babel-cli": "6.26.0",
+    "babel-preset-flow": "6.23.0",
+    "eslint-config-airbnb": "18.0.1",
+    "flow-bin": "0.105.2",
+    "fork-ts-checker-notifier-webpack-plugin": "1.0.2",
+    "uglifyjs-webpack-plugin": "2.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
