--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: circleci/node:8.10.0
+    - image: circleci/node:8.12.0
 version: 2
 jobs:
   checkout_code:
@@ -42,7 +42,7 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: "Test"
-          command: yarn test
+          command: yarn test:ci
   build:
     <<: *defaults
     steps:
